# ProgrammingSeminars

./: .gitignore  04.10.24.sql  06.09.24.sql  20.09.24.sql  CMakeLists.txt  DACS.sln  DACS.sln.DotSettings  DbDemo.sln  DbMediatorExample.sln  LICENSE  Practice.sln  README.md  RGU.DataBases.ClientApplication.sln  RGU.DistibutedSystems.sln  RGU.Magisters.Dev.sln  RGU.Minor.GraphTheory.sln  RGU.WebProgramming.sln  RGU.dotNET.sln  ThirdCourse.WPF.sln  big_integer.cpp  big_integer.h  binary_heap.c  binary_heap.h  db_init.sql  double_linked_list.cpp  double_linked_list.h  dynamic_array.c  dynamic_array.h  in1.txt  init.h  main.c  main.cpp  main213.cpp  stack.c  stack.h  task.txt  trie.cpp  trie.h  unidirectional_list.c  unidirectional_list.h
DACS.DependencyProperties/: App.xaml  App.xaml.cs  DACS.DependencyProperties.csproj
DACS.DryIoc.Cat/: Cat.cs
DACS.DryIoc.Compudahter.Dell/: DellCompudahter.cs  ServiceRegistration.cs
DACS.DryIoc.Cpu.AMD/: AMDCpu.cs  ServiceRegistration.cs
DACS.DryIoc.Cpu.Intel/: IntelCpu.cs  ServiceRegistration.cs
DACS.DryIoc.Dog/: Dog.cs
DACS.DryIoc.Domain/: CpuSettings.cs  DACS.DryIoc.Domain.csproj  IAnimal.cs  ICompudahter.cs  IOperatingSystem.cs  IServiceRegistrator.cs  ModuleSettings.cs
DACS.DryIoc.OperatingSystem.MintLinux/: ServiceRegistration.cs
DACS.DryIoc.OperatingSystem.Windows/: DACS.DryIoc.OperatingSystem.Windows.csproj  ServiceRegistration.cs
DACS.DryIoc.Target/: DACS.DryIoc.Target.csproj  Program.cs  Zoo.cs
DACS.DryIoc.Zoo/: DACS.DryIoc.Zoo.csproj
DACS.HelloWorld/: App.xaml  App.xaml.cs  DACS.HelloWorld.csproj
(+427 files in other folders)
